# MasterESPFirmware

./: CMakeLists.txt  partitions.csv  sdkconfig
main/: CMakeLists.txt  battery.c  battery.h  common.h  main.c  peoplecounting.c  peoplecounting.h  webserver.c  webserver.h  wifi.c  wifi.h
www/: index.html
